[gd_scene load_steps=4 format=3 uid="uid://b4xq5vfh8nyw1"]

[ext_resource type="Script" uid="uid://ch4kstoaf6xlw" path="res://scripts/ui/creature_card.gd" id="1_r5p1w"]
[ext_resource type="Theme" path="res://resources/themes/default_theme.tres" id="2_mxp7l"]
[ext_resource type="Texture2D" uid="uid://b33wvug6lmi3n" path="res://assets/sprites/items/all-svgs_burn.svg" id="3_rivws"]

[node name="CreatureCard" type="PanelContainer"]
offset_right = 100.0
offset_bottom = 227.0
theme = ExtResource("2_mxp7l")
script = ExtResource("1_r5p1w")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="VBox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_rivws")
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="VBox"]
clip_contents = true
layout_mode = 2
text = "Creature Name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="SpeciesLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Species"
horizontal_alignment = 1
autowrap_mode = 2

[node name="LevelLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Age: 0 weeks"
horizontal_alignment = 1

[node name="Stats" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="StaminaLabel" type="Label" parent="VBox/Stats"]
layout_mode = 2
text = "Stamina"
horizontal_alignment = 1

[node name="StaminaBar" type="ProgressBar" parent="VBox/Stats"]
layout_mode = 2
value = 100.0
show_percentage = false

[node name="EmptySlotLabel" type="Label" parent="VBox"]
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "Empty Slot"
horizontal_alignment = 1
vertical_alignment = 1
